<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StackSearch</string>
    <string name="import_start">Import</string>
    <string name="count_users">Count users</string>
    <string name="list_users">List users</string>
    <string name="display_name">Display name</string>
    <string name="about">About</string>
    <string name="reputation">Reputation</string>
    <string name="user_notfound">The selected user was not found in the database</string>
    <string name="select_user">Select a user from the list</string>
    <string name="test_create_function">Test create_function</string>
</resources>
