<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_start"
        android:id="@+id/button_import"
        android:onClick="doImport" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/count_users"
        android:id="@+id/button_count"
        android:onClick="countUsers"
         />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_users"
        android:id="@+id/button_list"
        android:onClick="listUsers"
        />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_create_function"
        android:id="@+id/button_create_function"
        android:onClick="testCreateFunction"
        />
</LinearLayout>
