<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" >

    <!-- Display name -->
    <TextView
        android:layout_width="wrap_content"
        style="@android:style/TextAppearance.Large"
        android:layout_height="wrap_content"
        android:text="@string/display_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/displayName_value" />

    <TextView
        android:layout_width="wrap_content"
        style="@android:style/TextAppearance.Large"
        android:layout_height="wrap_content"
        android:text="@string/reputation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reputation_value" />

    <!-- About -->
    <TextView
        android:layout_width="wrap_content"
        style="@android:style/TextAppearance.Large"
        android:layout_height="wrap_content"
        android:text="@string/about"/>
    <WebView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_value"
        style="@android:style/Widget.TextView"
        />

</LinearLayout>
